# ProXavier

./: .Env.example  Procfile  README.md  __init__.py  alpaca_client.py  bot.py  config.py  data_manager.py  download  indicators.py  position_manager.py  pyproject.toml  requirements.txt  risk_manager.py  signal_model.py  xavier_main.py
xavier/: __init__.py  alpaca_client.py  bot.py  config.py  data_manager.py  indicators.py  position_manager.py  risk_manager.py  scanner.py  strategies.py
